day1: add part2, refine

--- a/day1/day1.cabal
+++ b/day1/day1.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.34.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,17 +25,18 @@ source-repository head
 
 library
   exposed-modules:
-      Import
-      Run
-      Types
-      Util
+      Day1.Import
+      Day1.Run
+      Day1.Types
+      Day1.Util
   other-modules:
       Paths_day1
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.11 && <10
+      array
+    , base >=4.11
     , rio >=0.1.12.0
   default-language: Haskell2010
 
@@ -47,7 +48,8 @@ executable day1-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.11 && <10
+      array
+    , base >=4.11
     , day1
     , optparse-simple
     , rio >=0.1.12.0
@@ -63,7 +65,8 @@ test-suite day1-test
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.11 && <10
+      array
+    , base >=4.11
     , day1
     , hspec
     , rio >=0.1.12.0
