--- a/utils/package.yaml
+++ b/utils/package.yaml
@@ -20,9 +20,10 @@ extra-source-files:
 description:         Please see the README on Github at <https://github.com/smunix/utils#readme>
 
 dependencies:
-- base >= 4.11
-- rio >= 0.1.12.0
-- template-haskell
+ - base >= 4.11
+ - rio >= 0.1.12.0
+ - template-haskell
+ - monad-extras
 
 ghc-options:
 - -Wall
@@ -35,6 +36,8 @@ ghc-options:
 
 library:
   source-dirs: src
+  dependencies:
+  - day1
 
 executables:
   utils-exe:
