--- a/d1b/d1b.cabal
+++ b/d1b/d1b.cabal
@@ -1,14 +1,14 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.2.
+-- This file has been generated from package.yaml by hpack version 0.34.1.
 --
 -- see: https://github.com/sol/hpack
 
-name:           d1
+name:           d1b
 version:        0.1.0.0
-description:    Please see the README on Github at <https://github.com/smunix/d1#readme>
-homepage:       https://github.com/smunix/d1#readme
-bug-reports:    https://github.com/smunix/d1/issues
+description:    Please see the README on Github at <https://github.com/smunix/d1b#readme>
+homepage:       https://github.com/smunix/d1b#readme
+bug-reports:    https://github.com/smunix/d1b/issues
 author:         Providence Salumu
 maintainer:     Providence.Salumu@smunix.com
 copyright:      BSD3
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/smunix/d1
+  location: https://github.com/smunix/d1b
 
 library
   exposed-modules:
@@ -30,7 +30,7 @@ library
       Types
       Util
   other-modules:
-      Paths_d1
+      Paths_d1b
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
@@ -39,32 +39,32 @@ library
     , rio >=0.1.12.0
   default-language: Haskell2010
 
-executable d1-exe
+executable d1b-exe
   main-is: Main.hs
   other-modules:
-      Paths_d1
+      Paths_d1b
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.11 && <10
-    , d1
+    , d1b
     , optparse-simple
     , rio >=0.1.12.0
   default-language: Haskell2010
 
-test-suite d1-test
+test-suite d1b-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
       UtilSpec
-      Paths_d1
+      Paths_d1b
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.11 && <10
-    , d1
+    , d1b
     , hspec
     , rio >=0.1.12.0
   default-language: Haskell2010
